# qrcode-helper

./: README.md  changelog.md  package.json  pnpm-lock.yaml  vite.config.ts
src/: App.vue  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: generate.rs  main.rs  parse.rs  settings.rs
src/components/: Navigation.vue
src/views/: generate.vue  parse.vue  settings.vue
src/views/generate/: generate.vue  multiple.vue  single.vue
src/views/parse/: multiple.vue  parse.vue  single.vue
