[package]
name = "qrcode-helper"
version = "0.1.0"
description = "Generation and decoding of QR codes"
authors = ["Hunlongyu <hunlongyu@gmail.com>"]
license = "MIT"
repository = "https://github.com/Hunlongyu/qrcode-helper"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "^1.0", features = [] }

[dependencies]
tauri = { version = "^1.0", features = ["clipboard", "clipboard-all", "dialog-open", "shell-open"] }
serde = { version = "^1.0", features = ["derive"] }
serde_json = "^1.0"
tokio = "^1.28"
image = "^0.24"
resvg = { version = "0.28.0", optional = true }
fast_qr = {version="0.9.0", features= ["image"] }
rxing = "^0.4"
clippers = "^0.1"
rqrr = "^0.6"
