[package]
name = "qrcode-helper"
version = "0.1.0"
description = "Generation and decoding of QR codes"
authors = ["Hunlongyu <hunlongyu@gmail.com>"]
license = "MIT"
repository = "https://github.com/Hunlongyu/qrcode-helper"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[build-dependencies]
tauri-build = { version = "^1.0", features = [] }

[dependencies]
tauri = { version = "1.3", features = [ "global-shortcut-all", "clipboard", "clipboard-all", "custom-protocol", "dialog-all", "path-all", "protocol-all", "shell-open", "system-tray", "window-start-dragging"] }
serde = { version = "^1.0", features = ["derive"] }
serde_json = "^1.0"
tokio = { version = "1.32" }
async-process = "^1.7"
image = "^0.24"
resvg = { version = "^0.28", optional = true }
fast_qr = {version="0.9.0", features= ["image"] }
rxing = "^0.4"
arboard = "^3.2"
rqrr = "^0.6"
auto-launch = "^0.4"
screenshots = "^0.4"
libloading = "0.8.0"
